<resources>
    <string name="app_name">Kanban Board</string>
    <string name="to_do_text">TO DO</string>
    <string name="doing_text">DOING</string>
    <string name="done_text">DONE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_input_text">Entrez le titre de l\'evenement</string>
    <string name="title_builder_text">Ajout d\'un evenement</string>
    <string name="btn_creer_text">Créer</string>
    <string name="btn_retour_text">Retour</string>
    <string name="etiquette">Etiquette</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="event_title_text">Event Title</string>
    <string name="btn_add_event_text">Add Event</string>
    <string name="event_description_text">Event Description</string>
    <string name="event_date_text">Event Date</string>
    <string name="select_event_date_text">Select Event Date</string>
    <string name="cancel_text">Cancel</string>
</resources>
